<resources>
    <string name="app_name">EMBEatItServer</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Sign_In">Sign In</string>
    <string name="slogin">We Transport Products to Customers as quick as our betrays</string>
    <string name="s">نحن نقوم بنقل المنتجات إلى العملاء بسرعة فائقة</string>
    <string name="Login_Here">Login here</string>
    <string name="notAmemberYet">not Amember Yet</string>
    <string name="Password">Password</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="select">Select</string>
    <string name="Upload">Upload</string>
    <string name="enter_your_food">Enter Your Food</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="Discount">Discount</string>
    <string name="title_activity_tracking_order">TrackingOrder</string>
    <string name="old_Password">Old Password</string>
    <string name="new_Password">New Password</string>
    <string name="repeat_Password">Repeat New Password</string>
    <string name="Id">Id</string>
    <string name="send_message">Send Message</string>
    <string name="title">Title</string>
    <string name="content_message">Content Message</string>
    <string name="ShippersManagement">Shippers Management</string>
    <string name="name_shipper">Shipper Name</string>
    <string name="shipper_phone">Shipper Phone</string>
    <string name="shipper_password">Shipper Password</string>
    <string name="status">Status</string>
    <string name="chose_shipper">Chose Shipper</string>
    <string name="shipper">Shipper</string>
    <string name="order_details">Order Details</string>
    <string name="successful_Orders">Successful Orders</string>
    <string name="Call_shipper">Call Shipper</string>
    <string name="Call_client">Call Client</string>

    <string name="google_directions_key">AIzaSyD9TQRCR4M5q_ZCNPlOnt1TEBOXT743yQo</string>
    <string name="enter_menu_id">Enter Menu ID Category</string>
    <string name="description_category">Add New Category</string>
    <string name="update_Category">Update Category</string>
    <string name="Update">Update</string>
    <string name="menId">Menu Id Category</string>
    <string name="add_new_food">Add New Food</string>
    <string name="update_food_list">Update Food</string>
    <string name="AddToBanner">Add To Banner</string>
    <string name="Foodid">Food Id :</string>
    <string name="FoodName">Food Name :</string>
    <string name="choose_food">Choose Food</string>
    <string name="menuId">Menu Id</string>
    <string name="choose_menu_image">Choose Menu Image</string>
    <string name="Click_Here">Click Here</string>
    <string name="Done">Done</string>
    <string name="Application_Management">Application Management</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="Private_police">Private police</string>


</resources>
