<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_banner"
            android:icon="@drawable/ic_laptop_black_24dp"
            android:iconTint="@android:color/white"
            android:title="Banner"
            />


        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:iconTint="@android:color/white"
            android:title="Menu" />





        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:iconTint="@android:color/white"
            android:title="Orders" />



        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message_black_24dp"
            android:iconTint="@color/white"
            android:title="@string/send_message"
            />

        <item
            android:id="@+id/nav_success_request"
            android:icon="@drawable/ic_check_box_black_24dp"
            android:iconTint="@color/white"
            android:title="@string/successful_Orders"
            />

        <item
            android:id="@+id/nav_ShippersManagement"
            android:icon="@drawable/ic_local_shipping_black_24dp"
            android:iconTint="@color/white"
            android:title="@string/ShippersManagement"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="Sign out"
            android:iconTint="@android:color/white"
            />
    </group>



</menu>
