<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/my_bg"
    android:fillViewport="true"
    android:layoutDirection="locale"
     >

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="5dp"
    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

 <ImageView
     android:id="@+id/btn_cloase_addfoodlist"
     android:layout_width="40dp"
     android:layout_height="40dp"
     android:src="@drawable/ic_close_black_48dp"
     android:layout_alignParentTop="true"
     android:layout_alignParentRight="true"
     />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_edit_name"
        android:layout_centerInParent="true"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_food"
            android:layout_gravity="center"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_marginBottom="5dp"
            android:textColor="#35f406"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/foodlist"
            android:layout_marginTop="5dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editnameDialog_addFoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editDescriptionDialog_addFoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Description"
                android:inputType="textMultiLine"
                android:paddingBottom="24dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editPriceDialog_addFoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Price"
                android:inputType="number"
                android:paddingBottom="24dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editDiscountDialog_addFoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Discount"
                android:inputType="number"
                android:paddingBottom="24dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>




        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_below="@+id/layout_edit_name"
            >


            <Button
                android:id="@+id/btnDialog_Select_Foodlist"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/btnsignin"
                android:text="@string/select"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btnDialog_Uplaod_Foodlist"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/btnsignup"
                android:text="@string/Upload"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_margin="5dp"
                android:layout_alignParentBottom="true"
                />


        </LinearLayout>

    </LinearLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>


</ScrollView>