<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"

    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
         <ImageView
             android:id="@+id/close_dialog_category"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/ic_close_black_48dp"
              android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:padding="16dp"
        android:id="@+id/layout_edit_name"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_category"
            android:layout_gravity="center"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#35f406"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_categoryxl"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_menuId_Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_menu_id"
                android:inputType="numberDecimal"
                android:paddingBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_name_Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_below="@+id/layout_edit_name"
            >


            <Button
                android:id="@+id/btn_Dialog_Select"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/btnsignin"
                android:text="@string/select"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn_Dialog_Upload"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/btnsignup"
                android:text="@string/Upload"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_margin="5dp"
                android:layout_alignParentBottom="true"
                />


        </LinearLayout>

    </LinearLayout>

    </RelativeLayout>

    
    
    

</android.support.v7.widget.CardView>