<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/my_bg"
android:fillViewport="true"
android:layoutDirection="locale"
tools:context="food.spotting.eng_mahnoud83coffey.embeatitserver.SendMessageNews">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">



    <ImageView
        android:id="@+id/iamge_sendmessage_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hmessage"
        />



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:theme="@style/TextStyleEditext"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/title_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:paddingBottom="20dp"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:text="Food Spotting EMB"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextStyleEditext"
        app:passwordToggleEnabled="true"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/content_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content_message"
            android:inputType="textMultiLine"
            android:paddingBottom="20dp"
            android:textColor="@android:color/white"
            android:textSize="16dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_send_message"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btnsignup"
        android:text="@string/send_message"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        />




</LinearLayout>


</ScrollView>