<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/layout_edit_name"
        >


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dialog_name_shipper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_shipper"
                android:inputType="text"
                android:paddingBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dialog_phone_shipper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shipper_phone"
                android:inputType="number"
                android:paddingBottom="24dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"
            app:passwordToggleEnabled="true"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dialog_password_shipper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shipper_password"
                android:inputType="textPassword"
                android:paddingBottom="24dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>




    </LinearLayout>

</android.support.v7.widget.CardView>