<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/m8"
    android:fillViewport="true"
    android:layoutDirection="locale"
    tools:context="food.spotting.eng_mahnoud83coffey.embeatitserver.SignIn">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"

        android:padding="15dp">

        <TextView
            android:id="@+id/textHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/Sign_In"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:textStyle="bold"

            />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Phone_Number_SignIn"                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Phone_Number"
                android:inputType="phone"
                android:paddingBottom="20dp"
                android:text="0988123344"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextStyleEditext"
            app:passwordToggleEnabled="true"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Password_SignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:text="1234"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            >
            <com.rey.material.widget.CheckBox
                android:id="@+id/checkbox_Remember_me"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Material.Drawable.CheckBox"
                android:text="@string/remember_me"
                android:textColor="@color/black1"
                android:layout_gravity="left"
                android:textSize="15dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                />



        </LinearLayout>



        <Button
            android:id="@+id/Button_SignIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnsignin"
            android:text="@string/Sign_In"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">






        </LinearLayout>


    </LinearLayout>




</ScrollView>