<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/btn_cloase_addBanner"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close_black_48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_edit_name"
        android:layout_centerInParent="true"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddToBanner"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="#35f406"
            android:fontFamily="serif-monospace"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/banner_icon"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_food"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textSize="20dp"
            android:textColor="#35f406"
            android:fontFamily="serif-monospace"
            />

        <Spinner
            android:id="@+id/spinner_banner_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@drawable/background_spinner"
            android:gravity="center"
            android:spinnerMode="dialog"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="#cec8c8"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menuId"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/food_id_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="normal"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 android:layout_marginBottom="10dp"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FoodName"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/food_name_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Batata Hame Thro"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="italic"
                    />
            </LinearLayout>

        </LinearLayout>


        <Button
                android:id="@+id/btnDialog_add_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnsignin"
                android:text="@string/AddToBanner"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp"
                />

    </LinearLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>